--- a/index.html
+++ b/index.html
@@ -7,30 +7,31 @@
     <link rel="stylesheet" type="text/css" href="index.css"/>
 </head>
 <body>
-    <header class="header">
+    <div class="header">
         <h1>San Andreas Brazilian Jiu Jitsu</h1>
-    </header>
+    </div>
     <div class="div1">
-        <h2>Our locations</h2>
-        <h4>Sandy shores . Paleto bay . Del Perro . Murrieta heights . 
+        <h2 class="text1">Our locations</h2>
+        <h4 class="text1">Sandy shores . Paleto bay . Del Perro . Murrieta heights . 
             Vinewood hills . Chumash</h4>
     </div>
     <div class="div2">
-        <h2>Mission statement</h2>
-        <p>At SABJJ we aspire to build a rough and unsafe enviroment
+        <h2 class="text1">Mission statement</h2>
+        <p class="text1">At SABJJ we aspire to build a rough and unsafe enviroment
              for Brazilian Jiu Jitsu learners around the state of San 
              Andreas to make tough and scary soldiers that crank heel hooks</p>
-        <h4>Our instructors and their roots</h4>
-        <p>Dr Murphy Gracie is a coral belt from the school of Steven Seagal,
+        <h4 class="text1">Our instructors and their roots</h4>
+        <p class="text1">Dr Murphy Gracie is a coral belt from the school of Steven Seagal,
             Professor Jane Adams is a blue belt from the school of JRE, and Mr.
              Hamad Al Thani is a master of the arts trained by Helio Gracies soul.
         </p>
-        <h5>Below is a photo of our owner Stephen Seagal 
+        <h5 class="text1">Below is a photo of our owner Stephen Seagal 
             (not the legend Steven Seagal) with Helio Gracie</h5>
     </div>
     <div class="div3">
-        <img src="gracieiconicphoto.jpeg">
+        <img src="gracieiconicphoto.jpeg" class="image1">
     </div>
-    <footer>Call us to schedule class plans at (213)-999-9991 . SABJJ . 876 Woodale RD Sandy Shores™️</footer>
+    <footer class="text1">Call us to schedule class plans at (213)-9
+        99-9991 . SABJJ . 876 Woodale RD Sandy Shores™️</footer>
 </body>
 </html>
