fixed grammatical issues

--- a/index.html
+++ b/index.html
@@ -31,7 +31,7 @@
     <div class="div3">
         <img src="gracieiconicphoto.jpeg" class="image1">
     </div>
-    <footer class="text1">Call us to schedule class plans at (213)-9
-        99-9991 . SABJJ . 876 Woodale RD Sandy Shores™️</footer>
+    <footer class="text1">Call us to schedule class plans at 
+        (213)-999-9991 . SABJJ . 876 Woodale rd Sandy Shores™️</footer>
 </body>
 </html>
